--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
             tools:targetApi="31">
         <activity
                 android:name=".components.TrainInfoListActivity"
+                android:exported="false" />
+        <activity
+                android:name=".MainActivity"
                 android:exported="true"
+                android:label="@string/app_name"
                 android:theme="@style/Theme.AndroidCourse">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
