--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:theme="@style/Theme.AndroidCourse"
             tools:targetApi="31">
         <activity
+                android:name=".components.EditTrainInfoActivity"
+                android:exported="false" />
+        <activity
                 android:name=".components.TrainInfoListActivity"
                 android:exported="true"
                 android:theme="@style/Theme.AndroidCourse">
