--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             tools:targetApi="31"
             >
         <activity
-                android:name=".components.TicketInquiryActivity"
+                android:name=".components.LoginActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
